Fix issue where horizontal scrollbar would show up
Webpage was able to scroll horizontally for no apparent reason. Fixed
by hiding overflow.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
     font-family: 'Courier New', Courier, monospace;
     background-color: #D3D3D3;
+    overflow: hidden;
 }
 
 .settings,
